--- a/app/about.html
+++ b/app/about.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="img/favicon/fav_mount.png">
   <link rel="stylesheet" href="./css/style.min.css" type="text/css">
   <script src="./js/svg.js"></script>
-  <script src="./js/activeTheme.js"></script>
   <link rel="preload" href="./fonts/Roboto-Bold.woff2" type="font/woff2" as="font" crossorigin>
   <link rel="preload" href="./fonts/Roboto-Regular.woff2" type="font/woff2" as="font" crossorigin>
   <title>About</title>
 </head>
 
-<body class="mountains">
+<body class="night">
   <div class="svg-placeholder"></div>
   <script>
     document.querySelector('.svg-placeholder').innerHTML = SVG_SPRITE
@@ -228,7 +228,6 @@
       <div class="preloader__percents">0%</div>
     </div>
   </div>
-  <!--script(src="./libs/jQuery/dist/jquery.min.js")-->
   <script src="./js/scripts.min.js"></script>
 </body>
 
